--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Download latest Google Survey Excel
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 */5 * * *' # Runs every five hours
 
