--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,29 +17,19 @@ jobs:
         uses: actions/checkout@v2 # checkout the repository content to github runner
 
       - name: Download a file
-        run: curl -L -o "Developer Salary Survey${{ steps.date.outputs.date }}.xlsx" https://docs.google.com/spreadsheets/d/11OrbJjxKWXm9qZUmLi0zuWvOAhW4CSflWZYb5EVgve4/export?format=xlsx&id=11OrbJjxKWXm9qZUmLi0zuWvOAhW4CSflWZYb5EVgve4
+        run: curl -L -o "Developer Salary Survey.xlsx" https://docs.google.com/spreadsheets/d/11OrbJjxKWXm9qZUmLi0zuWvOAhW4CSflWZYb5EVgve4/export?format=xlsx&id=11OrbJjxKWXm9qZUmLi0zuWvOAhW4CSflWZYb5EVgve4
  
-      - name: Set up Git
+      - name: commit files
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git checkout -b file-upload
-          git add .
-          git commit -m "Add downloaded file"
-          git push origin file-upload
-
-      - name: Create new file on main branch
-        uses: actions/github-script@v4
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A
+          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          
+      - name: push changes
+        uses: ad-m/github-push-action@v0.6.0
         with:
-          script: |
-            const fs = require('fs');
-            const content = fs.readFileSync("Developer Salary Survey${{ steps.date.outputs.date }}.xlsx", 'base64');
-            github.rest.repos.createOrUpdateFileContents({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              path: "Developer Salary Survey${{ steps.date.outputs.date }}.xlsx",
-              branch: 'main',
-              message: 'Add downloaded file',
-              content: content,
-            });
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main 
+
           
